--- a/vcweb/lighterprints/templates/lighterprints/mobile/full-activity-list.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/full-activity-list.html
@@ -1,4 +1,4 @@
-{% extends "lighterprints/mobile/lpbase.html" %}
+{% extends "mobile/divpage.html" %}
 
 {% block page_id %}full-activity-list{% endblock page_id %}
 {% block content %}
