--- a/vcweb/lighterprints/templates/lighterprints/mobile/navbar.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/navbar.html
@@ -1,8 +1,8 @@
-<div data-role='navbar' id='navbar'>
+<div data-role='navbar'>
     <ul>
-        <li><a href='#home-screen' data-role='button' data-icon='home' class='ui-btn-active' data-transition='fade'>Home</a></li>
-        <li><a href='#full-activity-list' data-role='button' data-icon='grid' data-transition='slide'>All activities</a></li>
-        <li><a href='#group-performance' data-role='button' data-icon='group' data-transition='pop'>Group performance</a></li>
+        <li><a href='#home-screen' data-role='button' data-icon='home' data-transition='fade'>Home</a></li>
+        <li><a href='#full-activity-list' data-role='button' data-icon='grid' data-transition='fade'>All activities</a></li>
+        <li><a href='#group-performance' data-role='button' data-icon='group' data-transition='fade'>Group performance</a></li>
     </ul>
 </div>
 
