--- a/vcweb/lighterprints/templates/lighterprints/mobile/full-activity-list.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/full-activity-list.html
@@ -1,4 +1,9 @@
 {% extends "mobile/divpage.html" %}
+{% block header %}
+<div data-role='header'>
+    <h1>All Activities</h1>
+</div>
+{% endblock header %}
 
 {% block page_id %}full-activity-list{% endblock page_id %}
 {% block content %}
