--- a/vcweb/core/templates/experimenter/register-participants.html
+++ b/vcweb/core/templates/experimenter/register-participants.html
@@ -26,7 +26,7 @@
     <p>Registering participants for <span style='padding:1px;' class='info'>{{experiment}}</span>.
     </p>
     <p>
-    <span style='padding: 3px;' class='ui-state-highlight'><b>There are currently {{experiment.participants.count}} registered participants.</b></span>
+    <span style='padding: 3px;' class='ui-state-highlight'><b>There are currently {{experiment.participant_set.count}} registered participants.</b></span>
     {% include "includes/form-as-div.html" %}
     <div>
         <button class='submit' type='submit'>Register</button>
