--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -55,12 +55,12 @@ FIXME: replace these links eventually.
                 href='{{e.clone_url}}'><img src='{{STATIC_URL}}images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a></li>
             {% if e.participant_set.count == 0  %}
             <li>
-            <a title='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants by email</a>
+            <a title='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
             </li>
             <li>
             <a title='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' 
                 href='{{e.controller_url}}/register-simple'>
-                <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
+                <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> test participants</a>
             </li>
             {% else %}
             <li><a title='clear all participants' href='{{e.controller_url}}/clear-participants' class='confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/group_delete.png' alt=''/> clear all participants</a></li>
