skeleton structure for adding new experiments for kushal to fill in

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -33,7 +33,7 @@
 FIXME: replace these links eventually.
 {% endcomment %}
 <div id='navmenu'>
-    <a href='/admin'>add / configure an experiment</a>
+    <a href='/experiment/add'>add / configure an experiment</a>
     <a href='/contact'>report a bug</a>
 </div>
 <div class='ui-state-highlight ui-corner-all'>
