adding 500 handler and adjusting error reporting

--- a/vcweb/core/templates/500.html
+++ b/vcweb/core/templates/500.html
@@ -8,12 +8,11 @@
     <div id='post'>
         <h2 class='title'>Unhandled server error</h2>
         <div class='entry'>
-            Our apologies, we just encountered an unforeseen error. It has
-            been logged and sent to our development team.  If you'd like to
-            report this error to us manually as well, please feel free to 
-            <a href='/contact'>contact us</a> and let us know what you were
-            doing at the time of the error and any other salient details
-            (browser version, OS, etc.).
+            We just encountered an unforeseen error that has been logged and emailed to
+            our development team.  If you'd like to report this error to us manually
+            as well, please feel free to <a href='/contact'>contact us</a> and let
+            us know what you were doing at the time of the error and any other
+            salient details (e.g., browser version, OS).
         </div>
     </div>
 {% endblock page %}
