updating home page

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -20,9 +20,11 @@
                 not be preserved.</b> Once we reach a public beta we will ensure that your data is maintained and migrated.
         </div>
         <div class='entry'>
-            Development is currently focused on converting the
-            <a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a>
+            We hope to eventually convert all of our <a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a>
             into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
+
+            Current development is focused on the <a class='external' href='http://vcweb.asu.edu/devfoot'>Lighter Footprints</a> HTML 5 mobile application 
+            (also usable in the latest builds of <a class='external' href='http://www.google.com/chrome'>Chrome</a> and <a class='external' href='http://www.apple.com/safari'>Safari</a>).
         </div>
         <br/>
         <p>
