removing sites module and fixing password_reset

--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -18,6 +18,8 @@ $(function() {
     <h3>Returning User</h3>
     <p>
     Don&#39;t have an account or a first-time user?  Please <a href='{% url core:register %}'>register first</a>.
+    <br>
+    If you've forgotten your password, you can <a href='{% url password-reset %}'>request a new one</a>.
     </p>
     {% include "includes/form-as-div.html" %}
     <div><button type='submit' class='submit'>Login</button></div>
