--- a/vcweb/core/templates/email/base.html
+++ b/vcweb/core/templates/email/base.html
@@ -6,5 +6,10 @@
 
             {% endblock %}
         </div>
+        <hr>
+        <div id='footer' style='font-size: 0.8em; font-family: Arial, Verdana, Tahoma, sans-serif;'>
+            NOTE: your login username is the same as the email address to which this message was sent.  If you have trouble
+            logging in, you can <a href='https://vcweb.asu.edu/accounts/password/reset/'>reset your password</a> or <a href='http://vcweb.asu.edu/contact'>contact us</a>.
+        </div>
     </body>
 </html>
