fixing bug in send_experiment_started template_name, experiment.name -> experiment.display_name
also setting EMAIL_BACKEND to console backend by default

--- a/vcweb/core/templates/email/experiment-started.html
+++ b/vcweb/core/templates/email/experiment-started.html
@@ -4,7 +4,7 @@
 <p>
 Greetings!
 <br><br>
-You have been registered as participating in the experiment {{ experiment.name }} and we wanted to let you know that it
+You have been registered as participating in the experiment {{ experiment.display_name }} and we wanted to let you know that it
 has just begun.  You can participate in this experiment by visiting {{ experiment.participant_url }} in your web browser.
 </p>
 <p>
