removing css positioning and font styling ala
http://www.alistapart.com/articles/cssemail/
http://css-tricks.com/using-css-in-html-emails-the-real-story/
http://www.campaignmonitor.com/css/

--- a/vcweb/core/templates/email/base.html
+++ b/vcweb/core/templates/email/base.html
@@ -1,13 +1,13 @@
 <html>
     <body>
-        <h3 style="font-family: Georgia, serif; line-height: 1.2; padding-bottom:.2em; margin: 1em 0 0 .7em; border-bottom: 1px solid #333;">vcweb notification</h3>
-        <div id='content' style='font-size: 1em; font-family: Arial, Verdana, Tahoma, sans-serif;'>
+        <h3 style="border-bottom: 1px solid #333;">vcweb notification</h3>
+        <div id='content'>
             {% block content %}
 
             {% endblock %}
         </div>
         <hr>
-        <div id='footer' style='font-size: 0.8em; font-family: Arial, Verdana, Tahoma, sans-serif;'>
+        <div id='footer'>
             NOTE: your login username is the same as the email address to which this message was sent.  If you have trouble
             logging in, you can <a href='https://vcweb.asu.edu/accounts/password/reset/'>reset your password</a> or <a href='http://vcweb.asu.edu/contact'>contact us</a>.
         </div>
