applying finishing touches to experiment started email.  recipients are now emailed one at a time so that their login email is abundantly clear.

--- a/vcweb/core/templates/email/base.html
+++ b/vcweb/core/templates/email/base.html
@@ -8,8 +8,10 @@
         </div>
         <hr>
         <div id='footer'>
-            NOTE: your login username is the same as the email address to which this message was sent.  If you have trouble
-            logging in, you can <a href='https://vcweb.asu.edu/accounts/password/reset/'>reset your password</a> or <a href='http://vcweb.asu.edu/contact'>contact us</a>.
+            <b>NOTE:</b> Your login username is the same as the email address to which this message was sent.  If you have trouble
+            logging in, you can <a href='https://vcweb.asu.edu/accounts/password/reset/'>reset your password</a>.
+            If you encounter any other issues with this web application please <a href='http://vcweb.asu.edu/contact'>contact us</a> 
+            or just reply to this email.
         </div>
     </body>
 </html>
