--- a/vcweb/core/templates/email/experiment-started.html
+++ b/vcweb/core/templates/email/experiment-started.html
@@ -4,8 +4,9 @@
 <p>
 Greetings!
 <br><br>
-You have been registered as participating in the experiment {{ experiment.display_name }} and we wanted to let you know that it
-has just begun.  You can participate in this experiment by visiting {{ experiment.participant_url }} in your web browser.
+You have been registered as a participant in the <b>{{ experiment.display_name }}</b> experiment and we wanted to let
+you know that it has just begun.  You can participate by visiting {{ full_participant_url }} in your web browser (you'll
+need to login first).
 </p>
 <p>
 {{ special_instructions }}
