fixing bugs in core download data, should convert into a reusable class based view / mixin for other apps to extend
improving nav menu a bit and adding missing sys import to settings

--- a/vcweb/core/templates/includes/nav-menu.html
+++ b/vcweb/core/templates/includes/nav-menu.html
@@ -1,25 +1,30 @@
 {% load tags %}
+{% load url from future %}
 
-{% url home as home %}
-{% url about as about %}
-{% url contact as contact %}
-{% url core:login as login %}
-{% url core:logout as logout %}
-{% url core:register as register %}
-{% url core:profile as profile %}
-{% url core:dashboard as dashboard %}
+{% url 'home' as home %}
+{% url 'about' as about %}
+{% url 'contact' as contact %}
+{% url 'core:login' as login %}
+{% url 'core:logout' as logout %}
+{% url 'core:register' as register %}
+{% url 'core:profile' as profile %}
+{% url 'core:dashboard' as dashboard %}
 
 <div id='menu'>
 <ul>
 	<li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
-	{% if request.user.is_authenticated %}
 	<li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
-        <li class='{% active request profile %}'><a href='{{ profile }}'>Profile</a></li>
+	<li class='{% active request contact %}'><a href='{{ contact }}'>Contact us</a></li>
+	{% if request.user.is_authenticated %}
 	<li class='{% active request logout %}'><a href='{{ logout }}'>Logout</a></li>
 	{% else %}
-	<li class='{% active request about %}'><a href='{{ about }}'>About</a></li>
-	<li class='{% active request contact %}'><a href='{{ contact }}'>Contact us</a></li>
-	<li class='{% active request login %} {% active request register %}'><a href='{{ login }}'>Login/Register</a></li>
+    <li class='{% active request login %} {% active request register %}'>
+    {% if debug_mode %}
+    <a href='{{ login }}'>Login/Register</a>
+    {% else %}
+    <a href='https://{{request.get_host}}{{ login }}'>Login/Register</a>
+    {% endif %}
+    </li>
 	{% endif %}
 </ul>
 </div>
