--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -10,25 +10,33 @@
         <div class='entry'>
             Welcome to the Virtual Commons Web Environment, an open software initiative hosted at
             <a class='external' href='http://www.asu.edu'>Arizona State University</a>.
-            We develop and support a variety of web-based collective action experiments.
-            For more information, please visit <a class='external' href='http://commons.asu.edu'>http://commons.asu.edu</a>.
+            We develop real-time dynamic experiments to help us analyze and understand issues related 
+            to the governance of common resources. Sharing common resources has been a challenge for 
+            human societies for millennia. In many circumstances, the ability to create effective institutional 
+            arrangements has helped avoid the tragedy of the commons. Controlled experiments have been instrumental 
+            in increasing our understanding of how humans organize themselves in cooperative arrangements to govern 
+            common resources. 
         </div>
-        <br/>
         <h2 class='title'>Current development</h2>
         <div class='alert alertIcon ui-corner-all'>
             This application is still under active development and in its alpha stage.  This means that <b>any data you create on this website will
                 not be preserved.</b> Once we reach a public beta we will ensure that your data is maintained and migrated.
         </div>
         <div class='entry'>
-            We hope to eventually convert all of our <a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a>
-            into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
-
+            <p>
             Current development is focused on the <a class='external' href='http://vcweb.asu.edu/devfoot'>Lighter Footprints</a> HTML 5 mobile application 
             (also usable in the latest builds of <a class='external' href='http://www.google.com/chrome'>Chrome</a> and <a class='external' href='http://www.apple.com/safari'>Safari</a>).
+            We are also planning to convert our <a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a>
+            into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
+            <br><br>
+            You can find up-to-date development news on <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>>our BitBucket repository</a>. 
+            </p>
         </div>
-        <br/>
-        <p>
-        For up-to-date development news, please visit <a class='external' href='http://commons.asu.edu/news'>http://commons.asu.edu/news</a>. 
-        </p>
+        <h2 class='title'>Acknowledgements</h2>
+        <div class='entry'>
+            The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
+            (BCS 0625354 and SES 0748632) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
+            and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
+        </div>
     </div>
 {% endblock page %}
