finishing data export for lighter footprints, still need to figure out how to best support it in core

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -29,7 +29,7 @@
             We are also planning to convert our <a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a>
             into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
             <br><br>
-            You can find up-to-date development news on <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>>our BitBucket repository</a>. 
+            You can find up-to-date development news at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>our BitBucket repository</a>.
             </p>
         </div>
         <h2 class='title'>Acknowledgements</h2>
