--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -23,8 +23,13 @@ $(function() {
     </p>
     {% include "includes/form-as-div.html" %}
     <div><button type='submit' class='submit'>Login</button></div>
-    <div><a href="{% url socialauth_begin 'twitter' %}"><img src="https://dev.twitter.com/sites/default/files/images_documentation/sign-in-with-twitter_0.png"></a></div>
-    <div><a href="{% url socialauth_begin 'foursquare' %}"><img src="https://playfoursquare.s3.amazonaws.com/press/logo/connect-black.png"></a></div>
+    <br><br>
+    You can also register or sign in using your other social accounts:
+    <ul class="authbadges">
+        <li><a href="{% url socialauth_begin 'twitter' %}"><img width="150", height="24" src="{{STATIC_URL}}images/oauth/sign-in-with-twitter_0.png"></a>
+        <li><a href="{% url socialauth_begin 'foursquare' %}"><img src="{{STATIC_URL}}images/oauth/foursquare-connect-black.png"></a>
+        <li><a href="{% url socialauth_begin 'facebook' %}"><img width="193", height="23" src="{{STATIC_URL}}images/oauth/facebook-connect-button.png"></a>
+    </ul>
 
 {% endblock form %}
 
