customizing base vcweb template

--- a/vcweb/lighterprints/templates/lighterprints/about.html
+++ b/vcweb/lighterprints/templates/lighterprints/about.html
@@ -1,22 +1,10 @@
-{% extends "participant/base.html" %}
-{% block head %}
-{{ block.super }}
-<script type="text/javascript">
-    $(function() {
-    });
-</script>
-{% endblock %}
-{% block title %}
-The Lighter Footprints Challenge
-{% endblock %}
+{% extends "lighterprints/base.html" %}
 {% block content %}
-<h3>Lighter Footprints</h3>
-{% include "lighterprints/navmenu.html" %}
 <p>
-Welcome to the Lighter Footprints Challenge!  Your mission, should you choose to accept it, is to learn about and put
-into practice alternative activities and actions you can take to reduce your environmental footprint.  You can earn
-green points that are scaled to the relative impact of a particular alternative activity and unlock badges and more
-activities and actions by participating.
+Welcome to the Lighter Footprints Challenge!  Our goal is to help you learn about and put into practice alternative
+activities and concrete actions you can take to reduce your environmental footprint.  You can earn green points that are
+scaled to the relative impact of a particular alternative activity and unlock badges and more activities and actions by
+participating in the challenge.
 </p>
 
 <p>
