--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,17 +1,5 @@
-{% extends "participant/base.html" %}
-{% block head %}
-{{ block.super }}
-<script type="text/javascript">
-    $(function() {
-    });
-</script>
-{% endblock %}
-{% block title %}
-Lighter Footprints
-{% endblock %}
+{% extends "lighterprints/base.html" %}
 {% block content %}
-<h4>Lighter Footprints Public Challenge</h4>
-{% include "lighterprints/navmenu.html" %}
 <p>
 Welcome to the Lighter Footprints Challenge!  Your available activities are listed below.
 </p>
