--- a/vcweb/lighterprints/templates/lighterprints/navmenu.html
+++ b/vcweb/lighterprints/templates/lighterprints/navmenu.html
@@ -1,7 +1,7 @@
 <div id='navmenu'>
-    <a href='about'>About</a>
+    <a href='/lighterprints/about'>About</a>
     <a href='home'>Dashboard</a>
-    <a href='activity'>Activities</a>
+    <a href='activity'>All Activities</a>
     <a href='greenbutton'>Submit Green Button Data</a>
 </div>
 
