adding data migration for lighterprints public experiment

--- a/vcweb/lighterprints/templates/lighterprints/about.html
+++ b/vcweb/lighterprints/templates/lighterprints/about.html
@@ -8,7 +8,7 @@ participating in the challenge.
 </p>
 
 <p>
-If you already practice what we're preaching, then good for you!  You can still participate and compare your
-environmental footprint with your friends.
+If these activities are already a part of your daily life, good for you!  You can still participate and compare your
+environmental footprint with your friends.  If you'd like to get involved, please <a href='/contact'>feel free to contact us</a>.
 </p>
 {% endblock content %}
