setting copyright year dynamically and performing is_activity_available checks on full webapp version

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -82,7 +82,7 @@
             <a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>
             </p>
             <p class='legal'>
-            Copyright (c) 2010 Arizona Board of Regents.  Design adapted from <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.<br/>
+            Copyright (c) {% now "Y" %} Arizona Board of Regents.  Design adapted from <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.<br/>
             This project is funded by the <a href='http://nsf.gov'>National Science Foundation</a> and <a href='http://www.asu.edu'>Arizona State University</a>.
             <br />
             </p>
