adding django-bootstrap-forms and twitter bootstrap to static file

--- a/vcweb/lighterprints/templates/lighterprints/navmenu.html
+++ b/vcweb/lighterprints/templates/lighterprints/navmenu.html
@@ -1,7 +1,7 @@
 <div id='navmenu'>
     <a href='/lighterprints/about'>About</a>
-    <a href='home'>Dashboard</a>
+    <a href='https://vcweb.asu.edu/devfoot'>App</a>
     <a href='activity'>All Activities</a>
-    <a href='greenbutton'>Submit Green Button Data</a>
+    <a href='/lighterprints/greenbutton/upload'>Submit Green Button Data</a>
 </div>
 
