--- a/vcweb/lighterprints/templates/lighterprints/greenbutton-upload.html
+++ b/vcweb/lighterprints/templates/lighterprints/greenbutton-upload.html
@@ -1,9 +1,18 @@
 {% extends "lighterprints/base.html" %}
 {% block content %}
+<div class='entry'>
+    You can upload <a href='http://greenbuttondata.org'>Green Button Data</a> from your participating energy provider
+    for additional green points.  Verifying your energy footprint provides a 50% boost to all green points earned for
+    the reporting period.
+</div>
+<div class='info infoIcon'>
+
+</div>
 <h3>Green Button Data Upload</h3>
-<form id='vcweb-form' action='' method='post' enctype='multipart/form-data'>
-    <div class='field'>
-        <input type='file' name='file'>
+<form id='vcweb-form' action='' method='post' enctype='multipart/form-data' class='form-horizontal'>
+    {{ form }}
+    <div class='form-actions'>
+        <button type='submit' class='btn btn-primary'>Submit</button>
     </div>
 </form>
 {% endblock content %}
