file upload now works properly, was missing a seek(0)

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         {% block head %}
         <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.css">
+        <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css">
+        <!--
         <link rel="stylesheet" href="{{STATIC_URL}}css/blueprint/screen.css" type="text/css" media="screen, projection" />
         <link rel="stylesheet" href="{{STATIC_URL}}css/blueprint/print.css" type="text/css" media="print" />
+        -->
         <!--[if lt IE 8]><link rel="stylesheet" href="{{STATIC_URL}}media/css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
         <link href="{{STATIC_URL}}css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />
         <link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css" media="screen" />
