--- a/vcweb/lighterprints/templates/lighterprints/greenbutton-upload.html
+++ b/vcweb/lighterprints/templates/lighterprints/greenbutton-upload.html
@@ -6,7 +6,8 @@
     the reporting period.
 </div>
 <div class='info infoIcon'>
-
+    At the moment we can process daily Green Button data with <b>1 hour interval readings in watt-hours</b>.  If your
+    data does not conform we won't be able to aggregate it properly.
 </div>
 <h3>Green Button Data Upload</h3>
 <form id='vcweb-form' action='' method='post' enctype='multipart/form-data' class='form-horizontal'>
